# llama2.py

./: CMakeLists.txt  export.py  perf.bat  run.c  run.py
kernel/: dropout.py  flash_attention.py  fnn.py  matmul.py  rmsnorm.py  rope.py  swiglu.py  vec_add.py
tests/: bench_util.py  drop_test.py  matmul_test.py  rmsnorm_test.py
tests/output/: dropout.csv  matvec.csv  rmsnorm.csv
